--- a/requirements.txt
+++ b/requirements.txt
@@ -1,125 +1,55 @@
-anyio==4.3.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astropy==6.0.1
-astropy-iers-data==0.2024.4.8.0.32.4
-asttokens==2.4.1
-async-lru==2.0.4
-attrs==23.2.0
-Babel==2.14.0
-beautifulsoup4==4.12.3
-bleach==6.1.0
-bokeh==3.4.0
-certifi==2024.2.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-cloudpickle==3.0.0
-colorcet==3.1.0
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-dask==2024.4.1
-datashader==0.16.0
-debugpy==1.8.1
-decorator==5.1.1
-defusedxml==0.7.1
-executing==2.0.1
-fastjsonschema==2.19.1
-fonttools==4.51.0
-fqdn==1.5.1
-fsspec==2024.3.1
-h11==0.14.0
-httpcore==1.0.5
-httpx==0.27.0
-idna==3.6
-importlib_metadata==7.1.0
-ipykernel==6.29.4
-ipython==8.23.0
-isoduration==20.11.0
-jedi==0.19.1
-Jinja2==3.1.3
-json5==0.9.24
-jsonpointer==2.4
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.1
-jupyter_core==5.7.2
-jupyter_server==2.13.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.1.6
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.26.0
-kiwisolver==1.4.5
-llvmlite==0.42.0
-locket==1.0.0
-MarkupSafe==2.1.5
-matplotlib==3.8.4
-matplotlib-inline==0.1.6
-mistune==3.0.2
-multipledispatch==1.0.0
-nbclient==0.10.0
-nbconvert==7.16.3
-nbformat==5.10.4
-nest-asyncio==1.6.0
-notebook_shim==0.2.4
-numba==0.59.1
-numpy==1.26.4
-overrides==7.7.0
-packaging==24.0
-pandas==2.2.1
-pandocfilters==1.5.1
-param==2.1.0
-parso==0.8.4
-partd==1.4.1
-pexpect==4.9.0
-pillow==10.3.0
-platformdirs==4.2.0
-plotly==5.20.0
-prometheus_client==0.20.0
-prompt-toolkit==3.0.43
-psutil==5.9.8
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycparser==2.22
-pyct==0.5.0
-pyerfa==2.0.1.3
-Pygments==2.17.2
-pyparsing==3.1.2
-python-dateutil==2.9.0.post0
-python-json-logger==2.0.7
-pytz==2024.1
-PyYAML==6.0.1
-pyzmq==25.1.2
-referencing==0.34.0
-requests==2.31.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.18.0
-scipy==1.13.0
-Send2Trash==1.8.3
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.5
-stack-data==0.6.3
-tenacity==8.2.3
-terminado==0.18.1
-tinycss2==1.2.1
-toolz==0.12.1
-tornado==6.4
-traitlets==5.14.2
-types-python-dateutil==2.9.0.20240316
-typing_extensions==4.11.0
-tzdata==2024.1
-uri-template==1.3.0
-urllib3==2.2.1
-wcwidth==0.2.13
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.7.0
-xarray==2024.3.0
-xyzservices==2024.4.0
-zipp==3.18.1
+Package            Version
+------------------ -----------
+bleach             6.1.0
+bokeh              3.4.3
+certifi            2024.8.30
+charset-normalizer 3.3.2
+click              8.1.7
+cloudpickle        3.0.0
+colorcet           3.1.0
+contourpy          1.3.0
+dask               2024.8.1
+datashader         0.16.3
+fsspec             2024.6.1
+holoviews          1.19.1
+hvplot             0.10.0
+idna               3.8
+Jinja2             3.1.4
+linkify-it-py      2.0.3
+llvmlite           0.43.0
+locket             1.0.0
+Markdown           3.7
+markdown-it-py     3.0.0
+MarkupSafe         2.1.5
+mdit-py-plugins    0.4.1
+mdurl              0.1.2
+multipledispatch   1.0.0
+numba              0.60.0
+numpy              2.0.2
+packaging          24.1
+pandas             2.2.2
+panel              1.4.5
+param              2.1.1
+partd              1.4.2
+pillow             10.4.0
+pip                24.0
+pyct               0.5.0
+python-dateutil    2.9.0.post0
+pytz               2024.1
+pyviz_comms        3.0.3
+PyYAML             6.0.2
+requests           2.32.3
+scipy              1.14.1
+setuptools         69.5.1
+six                1.16.0
+toolz              0.12.1
+tornado            6.4.1
+tqdm               4.66.5
+typing_extensions  4.12.2
+tzdata             2024.1
+uc-micro-py        1.0.3
+urllib3            2.2.2
+webencodings       0.5.1
+wheel              0.43.0
+xarray             2024.7.0
+xyzservices        2024.6.0
